Basic understanding of useState, add increase,decease,reset buttons and counter

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import '~antd/dist/antd.css';
+
 .App {
   text-align: center;
+  background-color: #c5c7c0;
 }
 
 .App-logo {
@@ -28,6 +31,37 @@
   color: #61dafb;
 }
 
+body {
+  background-color: #e5e4e4;
+}
+
+.heading{
+  font-size: 4rem;
+}
+.count {
+  display: flex;
+  flex-direction: column;
+  color: #081110;
+  font-size: 20rem;
+}
+
+.button{
+  background-color: #4fb9a9;
+  height: 100%;
+  width: 100%;
+  border: 0px;
+  color: white;
+  font-size: 3rem;
+}
+
+.button:hover, .button:active{
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  border: 0px;
+  color: #4fb9a9;
+  font-size: 3rem;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
